--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,6 +90,7 @@ h3 {
 	width: 315px;
 	float: right;
 	margin: 5px;
+	height: 826px;
 	background: url("../imagens/fundo-caixa.png");
 }
 #conteudo_primario h5 {
@@ -99,10 +100,25 @@ h3 {
 	margin-bottom: 2px;
 	width: 75%;
 	line-height: 20px;
+	padding-left: 5px;
+}
+#conteudo_secundario h5 {
+	background: #f80033;
+	color: white;
+	text-transform: uppercase;
+	margin-bottom: 2px;
+	width: 75%;
+	line-height: 20px;
+	padding-left: 5px;
 }
 .caixa_texto {
 	background: white;
 	margin: 10px;
+}
+#conteudo_primario .caixa_texto_primario {
+	background: white;
+	margin: 10px;
+	padding-bottom: 10px;
 }
 .imagem {
 	width: 100%;
@@ -128,4 +144,39 @@ h3 {
 	color: white;
 	width: 55%;
 	line-height: 25px;
+}
+.imagem_pequena {
+	width: 43%;
+	margin: 10px;
+	margin-right: 0px;
+}
+.texto_pequeno {
+	font-size: 0.8em;
+}
+.mini_caixa {
+	margin-top: 10px;
+	margin-left: 0px;
+	width: 50%;
+	float: right;
+}
+h6 {
+	color: #05b5e0;
+	padding-bottom: 5px;
+	font-size: 0.8em;
+	font-weight: bold;
+}
+hr {
+	margin: 0px 10px;
+}
+a {
+	text-decoration: none;
+}
+#rodape {
+	clear: both;
+	background: #254567;
+	height: 60px;
+	color: white;
+	font-weight: bold;
+	text-align: center;
+	line-height: 60px;
 }
